refactor(cache): enhance CachedArchiveMetadata structure and improve cache handling in reader services